--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <img src="images/wizard.jpg" class="center">
     <div class="centr" >
-        <p style="border:3px; border-style:solid; 
+        <p style="border:3px; border-style:solid; font-size:1vw;
         border-color:#ffffff; padding: 1em; width:max-content; margin: auto;" 
         class="coolio">
         Greetings weary traveler, I am the Wizard of CyberSpace and  
