--- a/aboutme.html
+++ b/aboutme.html
@@ -8,13 +8,17 @@
     height: 200px; 
     overflow:hidden; 
     border-radius: 50%; 
-    border-color: rgba(173, 157, 114, 0.95);
-    border-width: 300px;
+   
     } 
   .circular--portrait img { 
     width: 100%; 
     height: auto; 
     }
+  .body {
+    background-image: url('images/fondo.jpeg');
+    background-size: cover;
+    background-attachment: fixed;
+  }
 </style>
 <head>
 
@@ -34,10 +38,10 @@
 <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@1,200&family=Press+Start+2P&display=swap" rel="stylesheet">
-
-
-
-  <div style="background-color: black;">
+<link href="https://fonts.googleapis.com/css2?family=Lora&family=Orbitron&display=swap" rel="stylesheet">
+</head>
+<body>
+  <div>
     <br>
     <a href="index.html" class="coolio" style="padding: 2em; color:rgba(173, 157, 114, 0.95);">
       <img src="svg/back.svg" style="width: 2em; height: 2em;">
@@ -49,24 +53,24 @@
   <br>
   <br>
 
-  <div class=" circular--portrait"> 
+  <div class=" circular--portrait" style="border: 2px solid rgba(173, 157, 114, 0.95);"> 
     <img src="images/grad_pic.jpeg"> 
   </div>
-  <div class="center">
-
-  </div>
-  <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="miguel-a-avilés-bonilla-205750172" data-version="v1">
-    <a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/miguel-a-avil%C3%A9s-bonilla-205750172?trk=profile-badge"
-    >Miguel A. Avilés Bonilla
-    </a>
-</div>
+  <br>
   <div class="center">
     <a style="padding: 1em;" href="https://github.com/elmondayuca"><img src="svg/github-2.svg"></a>
     <a style="padding: 1em;" href="https://www.linkedin.com/in/miguel-a-avil%C3%A9s-bonilla-205750172"><img src="svg/linkedin.svg"></a>
     <a style="padding: 1em;" href="mailto:elmondayuca@gmail.com"><img src="svg/mail.svg"></a>
   </div>
+  <hr style="background-color: rgba(173, 157, 114, 0.95); width: 20%; size: 5px;">
+  <div class="center">
+    <p style="color: white;" class="luna">
+      <strong>Miguel A. Avilés Bonilla</strong> is a driven young professional, recently graduated from the University of Texas at San Antonio with 
+      a bachelor's degree in computer science. 
+    </p>
+  </div>
 </div>
-</head>
+</body>
 
 
 
