made projects browsable through arrow keys and they can be selected with the enter key, added better descriptions for projects and bio

--- a/aboutme.html
+++ b/aboutme.html
@@ -65,8 +65,11 @@
   <hr style="background-color: rgba(173, 157, 114, 0.95); width: 20%; size: 5px;">
   <div class="center">
     <p style="color: white;" class="luna">
-      <strong>Miguel A. Avilés Bonilla</strong> is a driven young professional, recently graduated from the University of Texas at San Antonio with 
-      a bachelor's degree in computer science. 
+      <strong>Miguel A. Avilés Bonilla</strong> is a driven young professional, passionate about learning new technologies and using them for 
+      real world applications. He recently graduated from the University of Texas at San Antonio with a bachelor's degree in computer science
+      and is thrilled to have more time to put his skills to work. Through past experiences, Miguel is very conscious about his individual team 
+      members and makes it his first priority to learn from those more experienced than he is and simultaneously be that 
+      helping hand for members that might need it. 
     </p>
   </div>
 </div>
