--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
 
 <div style="background-color: black;">
   <br>
-  <a href="index.html" class="coolio" style="padding: 2em; color:rgba(173, 157, 114, 0.95);">
+  <a href="index.html" class="coolio" style="padding: 2em; color:rgba(173, 157, 114, 0.95); font-size: 1vw;">
     <img src="svg/back.svg" style="width: 2em; height: 2em;">
     Talk to wizard
   </a>
@@ -34,7 +34,7 @@
   <br>
   <br>
 <div class="center">
-  <h1 style="color: white; padding-left: 0;" class="coolio">PROJECTS</h1>
+  <h1 style="color: white; padding-left: 0; font-size: 2vw;" class="coolio">PROJECTS</h1>
 </div>
 <br>
 <br>
