--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <img src="images/wizard.jpg" class="center">
     <div class="centr" >
         <p style="border:3px; border-style:solid; 
-        border-color:#ffffff; padding: 1em; width:max-content; margin: auto;" 
+        border-color:#ffffff; padding: 1em; width:max-content; margin: auto; font-size: 1vw;" 
         class="coolio">
         Greetings weary traveler, I am the Wizard of CyberSpace and  
          <br> have been given the task of guiding you through Miguel's  
