testing responsiveness pt 2

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <br>
 
     <img src="images/wizard.jpg" class="center">
-    <div class="centr" >
+    <div class="centr">
         <p style="border:3px; border-style:solid; 
-        border-color:#ffffff; padding: 1em; width:max-content; margin: auto; font-size: 1vw;" 
+        border-color:#ffffff; border-spacing: 10%; border-collapse: separate; padding: 1em; width:max-content; margin: auto;" 
         class="coolio">
         Greetings weary traveler, I am the Wizard of CyberSpace and  
          <br> have been given the task of guiding you through Miguel's  
