--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
 
 <div style="background-color: black;">
   <br>
-  <a href="index.html" class="coolio" style="padding: 2em; color:rgba(173, 157, 114, 0.95); font-size: 1vw;">
+  <a href="index.html" class="coolio" style="padding: 2em; color:rgba(173, 157, 114, 0.95);">
     <img src="svg/back.svg" style="width: 2em; height: 2em;">
     Talk to wizard
   </a>
@@ -33,38 +33,34 @@
   <br>
   <br>
   <br>
-<div class="center">
-  <h1 style="color: white; padding-left: 0; font-size: 2vw;" class="coolio">PROJECTS</h1>
-</div>
+  <h1 style="color: white; padding-left: 0; font-size: 4vw; text-align: center;" class="coolio">PROJECTS</h1>
 <br>
 <br>
 <br>
 <br>
 <br>
-<div class="center">
   <div class="container">
     <div class="row">
-      <div class="col col-2 align-self-center">
+      <div class="col align-self-center">
         <a onclick="left()">
-          <img src="svg/left.svg" style="width: 3em; height: 3em;">
+          <img src="svg/left.svg" style="height: 75%; width: 75%;" class="float-right">
         </a>      
       </div>
-      <div class="col-8">
+      <div class="col-8 center">
         <a href="javascript:popup()">
-          <img id="myImg" style="width: 10em; height: 12em;"> 
+          <img id="myImg" class="img-fluid float-none" style="max-width: 50%; height: auto;"> 
           <br>
           <br>
-          <p id="projectName" style="color: white; text-align: center;" class="coolio"></p>
+          <p id="projectName" style="color: white; text-align: center; font-size: 2vw;" class="coolio"></p>
         </a>
       </div>
 
-      <div class="col col-2 align-self-center">
+      <div class="col align-self-center">
         <a onclick="right()">
-          <img src="svg/right.svg" style="width: 3em; height: 3em;">
+          <img src="svg/right.svg" style="height: 75; width: 75%;" class="float-left">
         </a>      
       </div>
     </div>
-</div>
 </div>
 <div id="popup1" class="overlay">
 	<div class="popup">
