--- a/aboutme.html
+++ b/aboutme.html
@@ -57,14 +57,14 @@
     <img src="images/grad_pic.jpeg"> 
   </div>
   <br>
-  <div class="center">
+  <div class="content" style="text-align: center;">
     <a style="padding: 1em;" href="https://github.com/elmondayuca"><img src="svg/github-2.svg"></a>
     <a style="padding: 1em;" href="https://www.linkedin.com/in/miguel-a-avil%C3%A9s-bonilla-205750172"><img src="svg/linkedin.svg"></a>
     <a style="padding: 1em;" href="mailto:elmondayuca@gmail.com"><img src="svg/mail.svg"></a>
   </div>
   <hr style="background-color: rgba(173, 157, 114, 0.95); width: 20%; size: 5px;">
-  <div class="center">
-    <p style="color: white;" class="luna">
+  <div class="content" style="text-align: center; max-width:max-content;">
+    <p style="color: white; text-align: center; padding-left: 15%; padding-right: 15%;" class="luna">
       <strong>Miguel A. Avilés Bonilla</strong> is a driven young professional, passionate about learning new technologies and using them for 
       real world applications. He recently graduated from the University of Texas at San Antonio with a bachelor's degree in computer science
       and is thrilled to have more time to put his skills to work. Through past experiences, Miguel is very conscious about his individual team 
