testing responsiveness pt 3

--- a/aboutme.html
+++ b/aboutme.html
@@ -64,7 +64,7 @@
   </div>
   <hr style="background-color: rgba(173, 157, 114, 0.95); width: 20%; size: 5px;">
   <div class="content" style="text-align: center; max-width:max-content;">
-    <p style="color: white; text-align: center; padding-left: 15%; padding-right: 15%;" class="luna">
+    <p style="color: white; text-align: center; padding-left: 15%; padding-right: 15%; font-size: 1.4em;" class="luna">
       <strong>Miguel A. Avilés Bonilla</strong> is a driven young professional, passionate about learning new technologies and using them for 
       real world applications. He recently graduated from the University of Texas at San Antonio with a bachelor's degree in computer science
       and is thrilled to have more time to put his skills to work. Through past experiences, Miguel is very conscious about his individual team 
