--- a/index.html
+++ b/index.html
@@ -31,15 +31,14 @@
     <br>
 
     <img src="images/wizard.jpg" class="center">
-    <div class="centr">
+    <div class="centr content" style="padding-left: 10%; padding-right: 10%;">
         <p style="border:3px; border-style:solid; 
-        border-color:#ffffff; border-spacing: 10%; border-collapse: separate; padding: 1em; width:max-content; margin: auto;" 
-        class="coolio">
-        Greetings weary traveler, I am the Wizard of CyberSpace and  
-         <br> have been given the task of guiding you through Miguel's  
-         <br>personal website. What truth do you seek? <br>
+        border-color:#ffffff; border-spacing: 10%; padding: 1em; font-size: 1em;" 
+        class="coolio content">
+        Greetings weary traveler, I am the Wizard of CyberSpace and have been given the task of guiding you through Miguel's  
+        personal website. What truth do you seek? <br>
         <br>        <a style="color: #ffffff;" href="aboutme.html"> * about miguel</a>   
-        &emsp; &emsp; &emsp; &emsp; &emsp; <a style="color: #ffffff;" href="projects.html"> * projects and experience</a></p>
+        <br> <a style="color: #ffffff;" href="projects.html"> * projects and experience</a></p>
     </div>
 
     
