--- a/projects.html
+++ b/projects.html
@@ -32,35 +32,36 @@
   <br>
   <br>
   <br>
-  <br>
-  <h1 style="color: white; padding-left: 0; font-size: 4vw; text-align: center;" class="coolio">PROJECTS</h1>
+  <div class="content">
+    <h1 style="color: white; padding-left: 0; text-align: center;" class="coolio">PROJECTS</h1>
+  </div>
 <br>
 <br>
 <br>
-<br>
-<br>
+<div class="content">
   <div class="container">
     <div class="row">
       <div class="col align-self-center">
         <a onclick="left()">
-          <img src="svg/left.svg" style="height: 75%; width: 75%;" class="float-right">
+          <img src="svg/left.svg" style="height: 75%; width: 75%;">
         </a>      
       </div>
       <div class="col-8 center">
         <a href="javascript:popup()">
-          <img id="myImg" class="img-fluid float-none" style="max-width: 50%; height: auto;"> 
+          <img id="myImg" style="max-width: 50%; height: auto;"> 
           <br>
           <br>
-          <p id="projectName" style="color: white; text-align: center; font-size: 2vw;" class="coolio"></p>
+          <p id="projectName" style="color: white; text-align: center; font-size: 1.6em;" class="coolio"></p>
         </a>
       </div>
 
       <div class="col align-self-center">
         <a onclick="right()">
-          <img src="svg/right.svg" style="height: 75; width: 75%;" class="float-left">
+          <img src="svg/right.svg" style="height: 75; width: 75%;">
         </a>      
       </div>
     </div>
+  </div>
 </div>
 <div id="popup1" class="overlay">
 	<div class="popup">
