updated bio & resume

--- a/aboutme.html
+++ b/aboutme.html
@@ -40,7 +40,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@1,200&family=Press+Start+2P&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Lora&family=Orbitron&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="background-color: black;">
   <div>
     <br>
     <a href="index.html" class="coolio" style="padding: 2em; color:rgba(173, 157, 114, 0.95);">
@@ -67,13 +67,22 @@
     <p style="color: white; text-align: center; padding-left: 15%; padding-right: 15%; font-size: 1.4em;" class="luna">
       <strong>Miguel A. Avilés Bonilla</strong> is a driven young professional, passionate about learning new technologies and using them for 
       real world applications. He recently graduated from the University of Texas at San Antonio with a bachelor's degree in computer science
-      and is thrilled to have more time to put his skills to work. Through past experiences, Miguel is very conscious about his individual team 
-      members and makes it his first priority to learn from those more experienced than he is and simultaneously be that 
-      helping hand for members that might need it. 
+      and is thrilled to have more time to put his skills to work. Through past experiences, Miguel is very conscious about his individual group 
+      members when put into a team and makes it his first priority to learn from those more experienced than he is and simultaneously be that 
+      helping hand for members that might need it. Miguel is well versed in software development and hungry to learn the tech industry. Miguel
+      Aviles is always ready to make a positive impact wherever he is. 
     </p>
   </div>
 </div>
 </body>
+<footer style="background-color: black;">
+  <br>
+  <br>
+  <br>
+  <div class="content">
+    <p></p>
+  </div>
+</footer>
 
 
 
