updated project descriptions

--- a/projects.html
+++ b/projects.html
@@ -70,14 +70,23 @@
     <br>
     <br>
 		<div class="content" class="luna" style="color: rgba(255, 251, 241, 0.95); font-family: 'Lora', serif;">
-			-Used AWS, Nginx, PHP, MySQL, to develop an eStore demo that sells vinyls 
+			- Used AWS, Nginx, PHP, MySQL, to develop an eStore prototype that sells vinyls 
       <br>
-      -Utilized an instance with 1vCPU and 1 GiB RAM. 
+      - Deployed application on an Ubuntu server with 1vCPU and 1 GiB RAM. 
       <br>
-      -Built all of the UI/UX features like product pages, navigation bar, shopping cart, and filtered product search using HTML, CSS, and JavaScript.
+      - Built all of the UI/UX features like product pages, navigation bar, shopping cart using HTML, CSS, Bootstrap and JavaScript.
       <br>
-      -Used phpmyadmin to manage all of the data on the site including user account information and product information
-		</div>
+      - Used MySQL and PhpMyAdmin to manage all of the data on the site including user account information and product information
+      <br>
+      - Ensured responsive design across all webpages on the site and guaranteed fluid rendering for devices of varying sizes.
+      <br>
+      - Wrote and placed necessary status/alert messages for an easy navigable user friendly experience 
+      <br>
+      - Implemented the necessary constraints for verifying user input before making actual changes to the database
+      <br>
+      - Exercised agile development practices
+      <br>
+    </div>
     <br>
     <p style="color: rgba(255, 255, 255, 0.95); font-family: 'Lora', serif;">Site Demo: <a href="https://ec2-184-73-133-185.compute-1.amazonaws.com">s0undspace.com</a></p>
         <br>
@@ -92,11 +101,19 @@
     <br>
     <br>
 		<div class="content" style="color: white; font-family: 'Lora', serif;">
-			-Used PHP, SQL, HTML to build a webpage that could interact with an SQL database/server on an EC2 instance, being able to add, remove, retrieve entries from the database from the webpage. 
+			- Used AWS, PHP, Nginx, MySQL, JSON, HTML to build a website/REST API that allowed the user to interact with a MySQL database full of devices and add, remove, retrieve, update device record entries from it. 
       <br>
-      -Site had its own SSL certificate for HTTPS
+      - Deployed application on an Ubuntu server with 1vCPU and 1 GiB RAM.
       <br>
-      -Sites functionality was also developed to be used as an API
+      - Used MySQL and PhpMyAdmin to manage all of the data on the site (5 Million device records)
+      <br>
+      - Made modifications to database schema, making use of relational database practices, speeding up query time by roughly 80%
+      <br>
+      - Site had its own SSL certificate for HTTPS
+      <br>
+      - User can call seven different API endpoints (Add, Delete, Update, Search, List, ViewDevice/File), tested HTTP calls using cURL
+      <br>
+      - Regularly monitored the cloud infrastructure, including backups, patches, and scaling
 		</div>
         <br>
         <br>
