--- a/projects.html
+++ b/projects.html
@@ -70,21 +70,12 @@
     <br>
     <br>
 		<div class="content" class="luna" style="color: rgba(255, 251, 241, 0.95); font-family: 'Lora', serif;">
-			- Used AWS, Nginx, PHP, MySQL, to develop an eStore prototype that sells vinyls 
+			Developed a functional eStore prototype that sells vinyls with the expected UI/UX features like product pages, 
+      navigation bar, shopping cart, filtered product search 
       <br>
-      - Deployed application on an Ubuntu server with 1vCPU and 1 GiB RAM. 
       <br>
-      - Built all of the UI/UX features like product pages, navigation bar, shopping cart using HTML, CSS, Bootstrap and JavaScript.
+      Used: AWS, Nginx, PHP, MySQL, HTML/CSS, Bootstrap, JavaScript
       <br>
-      - Used MySQL and PhpMyAdmin to manage all of the data on the site including user account information and product information
-      <br>
-      - Ensured responsive design across all webpages on the site and guaranteed fluid rendering for devices of varying sizes.
-      <br>
-      - Wrote and placed necessary status/alert messages for an easy navigable user friendly experience 
-      <br>
-      - Implemented the necessary constraints for verifying user input before making actual changes to the database
-      <br>
-      - Exercised agile development practices
       <br>
     </div>
     <br>
@@ -101,19 +92,11 @@
     <br>
     <br>
 		<div class="content" style="color: white; font-family: 'Lora', serif;">
-			- Used AWS, PHP, Nginx, MySQL, JSON, HTML to build a website/REST API that allowed the user to interact with a MySQL database full of devices and add, remove, retrieve, update device record entries from it. 
+			Built a website/REST API that allowed the user to interact with a MySQL database full of devices 
+      and add, remove, retrieve, update device record entries from it. 
       <br>
-      - Deployed application on an Ubuntu server with 1vCPU and 1 GiB RAM.
       <br>
-      - Used MySQL and PhpMyAdmin to manage all of the data on the site (5 Million device records)
-      <br>
-      - Made modifications to database schema, making use of relational database practices, speeding up query time by roughly 80%
-      <br>
-      - Site had its own SSL certificate for HTTPS
-      <br>
-      - User can call seven different API endpoints (Add, Delete, Update, Search, List, ViewDevice/File), tested HTTP calls using cURL
-      <br>
-      - Regularly monitored the cloud infrastructure, including backups, patches, and scaling
+      Used: AWS, PHP, Nginx, MySQL, JSON, JavaScript, HTML, Bootstrap
 		</div>
         <br>
         <br>
@@ -131,7 +114,7 @@
   document.onkeydown = checkKey;
 
   var projects = ["images/soundspace_icon.png", "images/cloud_icon.png", "images/resume_icon.png"];
-  var project_names = ["s0undspace.com", "Device Database & API", "resume.pdf"]
+  var project_names = ["s0undspace.com", "Device Database & API", "resume_de_miguel.pdf"]
   let i = 9999;
   function right() {
     i = i + 1;
@@ -150,7 +133,7 @@
     else if( (i%3) == 1 )
       location.hash = "#popup2";
     else if( (i%3) == 2 )
-      location.href = "resume.pdf";
+      location.href = "resume_de_miguel.pdf";
   }
 
   function checkKey(e) {
