--- a/projects.html
+++ b/projects.html
@@ -114,7 +114,7 @@
   document.onkeydown = checkKey;
 
   var projects = ["images/soundspace_icon.png", "images/cloud_icon.png", "images/resume_icon.png"];
-  var project_names = ["s0undspace.com", "Device Database & API", "resume_de_miguel.pdf"]
+  var project_names = ["s0undspace.com", "Device Database & API", "resume.pdf"]
   let i = 9999;
   function right() {
     i = i + 1;
