--- a/aboutme.html
+++ b/aboutme.html
@@ -60,7 +60,7 @@
   <div class="content" style="text-align: center;">
     <a style="padding: 1em;" href="https://github.com/elmondayuca"><img src="svg/github-2.svg"></a>
     <a style="padding: 1em;" href="https://www.linkedin.com/in/miguel-a-avil%C3%A9s-bonilla-205750172"><img src="svg/linkedin.svg"></a>
-    <a style="padding: 1em;" href="mailto:elmondayuca@gmail.com"><img src="svg/mail.svg"></a>
+    <a style="padding: 1em;" href="mailto:miguel4viles@gmail.com"><img src="svg/mail.svg"></a>
   </div>
   <hr style="background-color: rgba(173, 157, 114, 0.95); width: 20%; size: 5px;">
   <div class="content" style="text-align: center; max-width:max-content;">
