updated bio a lil

--- a/aboutme.html
+++ b/aboutme.html
@@ -67,10 +67,10 @@
     <p style="color: white; text-align: center; padding-left: 15%; padding-right: 15%; font-size: 1.4em;" class="luna">
       <strong>Miguel A. Avilés Bonilla</strong> is a driven young professional, passionate about learning new technologies and using them for 
       real world applications. He recently graduated from the University of Texas at San Antonio with a bachelor's degree in computer science
-      and is thrilled to have more time to put his skills to work. Through past experiences, Miguel is very conscious about his individual group 
-      members when put into a team and makes it his first priority to learn from those more experienced than he is and simultaneously be that 
-      helping hand for members that might need it. Miguel is well versed in software development and hungry to learn the tech industry. Miguel
-      Aviles is always ready to make a positive impact wherever he is. 
+      and is thrilled to have more time to put his skills to work. Miguel is well versed in multiple programming languages and the software development 
+      lifecycle. When put into a team, he is conscious about his individual group members and makes it his first priority to learn from those more 
+      experienced than he is and simultaneously be that helping hand for members that might need it. He is a curious individual that likes 
+      understanding things from the ground up and is always ready to make a positive impact wherever he is. 
     </p>
   </div>
 </div>
